--- a/index.html
+++ b/index.html
@@ -1,5 +1,20 @@
+<!DOCTYPE html>
 <html>
   <body>
-    <h1> TESTING </h1>
+
+    <p>A loop with a break.</p>
+
+    <p id="demo"></p>
+
+    <script>
+      var text = "";
+      var i;
+      for (i = 0; i < 10; i++) {
+        if (i === 3) { break; }
+         text += "The number is " + i + "<br>";
+      }
+      document.getElementById("demo").innerHTML = text;
+    </script>
+
   </body>
 </html>
